<resources>
    <string name="app_name">Kuman</string>
    <string name="facebook_app_id">713569766065250</string>
    <string name="fb_login_protocol_scheme">fb713569766065250</string>
    <string name="kanon_kanade">Kanon Kanade</string>
    <string name="kanonkanade_naver_jp">kanonkanade@naver.jp</string>
    <string name="sign_in_with_facebook">SIGN IN WITH FACEBOOK</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="wash_hand">Wash Hand</string>
    <string name="scan_hand">Scan Hand</string>
    <string name="covid_19_update">COVID-19 Update</string>
    <string name="deaths">Deaths</string>
    <string name="recovered">Recovered</string>
    <string name="confirmed">Confirmed</string>
    <string name="new_case">New Case</string>
    <string name="home">Home</string>
    <string name="scan_your_hand">Scan Your Hand</string>
    <string name="scan_now">Scan Now</string>
    <string name="notifications">Notifications</string>
    <string name="don_t_forget_to_wash_your_hands">Don\'t forget to wash your hands</string>
    <string name="account_settings">Account Settings</string>
    <string name="logout">Logout</string>
    <string name="terms_of_services">Terms of Services</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="user_settings">User Settings</string>
    <string name="times">times</string>
    <string name="hand_washed">Hand Washed</string>
    <string name="change_name">Change Name</string>
    <string name="change_your_display_name">Change your display name</string>
    <string name="change_location">Change Location</string>
    <string name="toggle_notification_off">Toggle Notification Off</string>
    <string name="turn_off_your_hand_washing_reminder">Turn off your hand washing reminder</string>
    <string name="remove_user_preferences">Remove user preferences</string>
    <string name="remove_everything_from_your_account">Remove everything from your account</string>
    <string name="hi_gin">Hi!Gin</string>
    <string name="scan">Scan</string>
</resources>
