<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

<<<<<<< Updated upstream
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!"
=======
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/titlebar"
        android:layout_width="match_parent"
        android:layout_height="86dp"
        android:background="@color/colorPrimary"
        android:paddingHorizontal="32dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:gravity="center"
                android:text="@string/home"
                android:textColor="@color/White"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/profilePicture"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/ic_account_circle_black_24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/notifBtn"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="2dp"
                android:background="@drawable/ic_bell_white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/covidLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/layout_bg"
        android:elevation="4dp"
        android:paddingVertical="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titlebar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/tvLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@id/covidBoxtitle">

            <LinearLayout
                android:id="@+id/newCaseLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/confirmedLayout">

                <TextView
                    android:id="@+id/newCase"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="6dp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/new_case"
                    android:textColor="@color/InfoTextColor"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/newCaseNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="6dp"
                    android:fontFamily="@font/poppins_bold"
                    android:text="993"
                    android:textColor="@color/InfoTextColor"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/confirmedLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/newCaseLayout"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/RecoveredLayout">

                <TextView
                    android:id="@+id/confirmed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="6dp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/confirmed"
                    android:textColor="@color/InfoTextColor"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/ConfirmedNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="6dp"
                    android:fontFamily="@font/poppins_bold"
                    android:text="30514"
                    android:textColor="@color/ConfirmedNumberColor"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/RecoveredLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/confirmedLayout"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/deathsLayout">

                <TextView
                    android:id="@+id/recovered"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="6dp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/recovered"
                    android:textColor="@color/InfoTextColor"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/recoveredNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="6dp"
                    android:fontFamily="@font/poppins_bold"
                    android:text="9907"
                    android:textColor="@color/RecoveredNumberColor"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/deathsLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/RecoveredLayout"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <TextView
                    android:id="@+id/deaths"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/deaths"
                    android:textColor="@color/InfoTextColor"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/deathsNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="6dp"
                    android:fontFamily="@font/poppins_bold"
                    android:text="1801"
                    android:textColor="@color/DeathNumberColor"
                    android:textSize="18sp" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/covidBoxtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center"
            android:text="@string/covid_19_update"
            android:textColor="@color/TextColor"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@id/tvLayout"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/locationTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/poppins_light"
            android:gravity="center"
            android:text="Current location: Indonesia"
            android:textColor="@color/TextColor"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/middleLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/covidLayout"
        app:layout_constraintBottom_toTopOf="@id/scanLayout">


        <!--TODO-->
        <LinearLayout
            android:id="@+id/scanHandLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/washHandLayout"
            app:layout_constraintStart_toStartOf="parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/scanHandIcon"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:background="@drawable/com_facebook_profile_picture_blank_square"/>

            <TextView
                android:id="@+id/scanHandTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/scan_hand"
                android:textColor="@color/BoxTextColor"
                android:textSize="14sp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/washHandLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/leaderboardLayout"
            app:layout_constraintStart_toEndOf="@id/scanHandLayout"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/washHandIcon"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:background="@drawable/com_facebook_profile_picture_blank_square"/>

            <TextView
                android:id="@+id/washHandTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/wash_hand"
                android:textColor="@color/BoxTextColor"
                android:textSize="14sp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/leaderboardLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/washHandLayout"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/leaderboardIcon"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:background="@drawable/com_facebook_profile_picture_blank_square"/>

            <TextView
                android:id="@+id/leaderboardTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/leaderboard"
                android:textColor="@color/BoxTextColor"
                android:textSize="14sp"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/scanLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/layout_bg"
        android:backgroundTint="@color/BoxColor"
        android:paddingHorizontal="12dp"
>>>>>>> Stashed changes
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>